@@ -3,6 +3,11 @@
    - markus@cvs.openbsd.org 2001/05/06 21:23:31
      [cli.c]
      cli_read() fails to catch SIGINT + overflow; from obdb@zzlevo.net
+   - markus@cvs.openbsd.org 2001/05/08 19:17:31
+     [channels.c serverloop.c]
+     adds correct error reporting to async connect()s
+     fixes the server-discards-data-before-connected-bug found by 
+     onoe@sm.sony.co.jp
 
 20010508
  - (bal) Fixed configure test for USE_SIA.  
@@ -5363,4 +5368,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1206 2001/05/08 20:05:44 mouring Exp $
+$Id: ChangeLog,v 1.1207 2001/05/08 20:07:39 mouring Exp $
